# custom-logger

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md  custom-logger.sln  demo.cpp  docker-compose.yml  main.cpp  sample.cpp
.github/workflows/: cmake.yml  dockercomposebuild.yml
Client/: Client.vcxproj  Client.vcxproj.filters  DummyClass.cpp  DummyClass.h  main.cpp  wrapper_lib_api.h
ClientApp/: ClientApp.cpp  ClientApp.vcxproj
Logger/: ILogger.h  ILoggerFilter.h  Logger.def  Logger.vcxproj  Logger.vcxproj.filters  LoggerLevel.h  dllmain.cpp  framework.h  logger.cpp  logger.h  loggerAPI.cpp  loggerAPI.h  loggerFilter.cpp  loggerFilter.h  logger_api.cpp  logger_api.h  pch.h
